# tawiza

./: .dockerignore  .editorconfig  .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  AUDIT.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.fr.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.en.md  README.fr.md  README.md  ROADMAP.md  SECURITY.md  TELEMETRY.md  alembic.ini  docker-compose.minimal.yml  docker-compose.yml  pyproject.toml  pytest.ini
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  ci-failure-issue.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  data_source_request.yml  feature_request.yml
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  codeql.yml  docker-build.yml  pr-sandbox.yml  release.yml  security-extras.yml  security.yml
alembic/: env.py  script.py.mako
alembic/versions/: 001_initial_schema.py  002_add_feedback_table.py  003_add_active_learning_tables.py  20260131_1115_add_missing_tables_users_scheduled_.py  20260219_2300_add_tajine_episodes_pgvector.py  20260221_2200_add_relations_tables.py  20260223_0100_extend_actor_types.py  20260223_0200_add_relation_snapshots.py  20260224_0100_extend_actor_types_phase7.py  20260225_2000_add_news_enhanced_columns.py
articles/001-dunkerque/: .gitignore  README.md
articles/001-dunkerque/scripts/: 00_download.py  carte_v3.py  regenerate_v2.py
articles/002-rga-argiles/: .gitignore  article.md  preview.html
articles/002-rga-argiles/scripts/: 00_download.py  01_merge.py  02_charts.py  03_preview.py
docker/: .env.example  Dockerfile.sandbox  docker-compose.ollama-gpu.yml
docker/prometheus/: prometheus.yml
docs/: api-reference.md  architecture.md  configuration.md  data-sources.md  docker-quickstart.md  getting-started.md  health-and-probes.md  runbook.md  self-hosting.md  telemetry.md
docs/exports/: source-observatory.md
docs/modules/: api.md  application.md  cli-tui.md  collector.md  core.md  crawler.md  data-hunter.md  decisions.md  investigation.md  knowledge-graph.md  llm.md  mcp.md  scripts.md  signaux.md  tajine.md
frontend/: .env.local.example  .gitignore  eslint.config.mjs  instrumentation.ts  middleware.ts  next.config.js  package.json  playwright.config.ts  proxy.ts  sentry.client.config.ts  sentry.server.config.ts  tailwind.config.ts  tsconfig.json
frontend/app/: global-error.tsx  layout.tsx  loading.tsx  page.tsx
frontend/app/dashboard/: error.tsx  layout.tsx  loading.tsx  page.tsx
frontend/app/login/: page.tsx
frontend/components/: MessageBox.tsx  MessageBoxChat.tsx  TextBlock.tsx  routes.tsx  telemetry-provider.tsx
frontend/components/agent-live/: DevToolsPanel.tsx  ScreenshotViewer.tsx  TerminalViewer.tsx
frontend/components/chat/: AgentTimeline.tsx  ChatInput.tsx  ChatView.tsx  ConversationSidebar.tsx  HistoryDropdown.tsx  MessageCard.tsx  index.ts
frontend/components/dashboard/: CognitiveBarChart.tsx  DepartmentRankingChart.tsx  EPCIScoresWidget.tsx  FactorRadarChart.tsx  SourceStatusCard.tsx  TerritorialHealthWidget.tsx
frontend/components/departments/: DataTableDepartments.tsx
frontend/components/footer/: FooterAdmin.tsx  FooterAuthDefault.tsx
frontend/components/layout/: index.tsx  sidebar.tsx
frontend/components/navbar/: NavbarAdmin.tsx
frontend/components/navigation/: MobileBottomNav.tsx
frontend/components/notifications/: NotificationBell.tsx
frontend/components/sidebar/: CollapsibleSidebar.tsx  Sidebar.tsx
frontend/components/skeletons/: index.tsx
frontend/components/system/: OllamaModelSelector.tsx  SystemHealthBar.tsx  index.ts
frontend/components/ui/: AlgorithmicBackground.tsx  ErrorBoundary.tsx  activity-feed.tsx  alerts-widget.tsx  animated-counter.tsx  button.tsx  card.tsx  carousel.tsx  chart-wrapper.tsx  crawler-status.tsx  france-heatmap.tsx  glass-card.tsx  global-search.tsx  hero-stats.tsx  intelligence-hub.tsx  kpi-card.tsx  loading-screen.tsx  orbit-spinner.tsx  page-loader.tsx  page-tabs.tsx  reasoning-display.tsx  resizable.tsx  sigma-graph-inner.tsx  sigma-graph.tsx  (+8 more)
frontend/contexts/: AuthContext.tsx  NotificationContext.tsx  TAJINEContext.tsx  layout.ts
frontend/data/: departments.ts
frontend/hooks/: index.ts  use-crawler-config.ts  use-fine-tuning.ts  use-investigation.ts  use-relations.ts  use-sources-health.ts  use-system-health.ts  use-tajine-websocket.ts  use-territorial-data.ts
frontend/lib/: api-conversations.ts  api-decisions.ts  api-news.ts  api-tajine.ts  api.ts  departments.ts  export-utils.ts  telemetry.ts  websocket.ts
frontend/styles/: globals.css
frontend/tests-e2e/: example.spec.ts
frontend/types/: assets.d.ts  relations.ts  styled-jsx.d.ts  supabase.ts  types.ts
frontend/utils/: helpers.ts
frontend/variables/: charts.ts  tableDataInvoice.ts  tableDataUserReports.ts
scripts/: check-ports.sh  collect_territorial.py  create_vector_schema.sql  health-check.sh  pr-scan.sh  preflight-check.sh  sandbox-scan.sh  setup-dev-environment.sh  setup-dev.sh
src/analysis/: mptoo_style.py  tawiza_style.py
src/cli/: __init__.py  completion.py  constants.py  entrypoint.py  errors.py  main.py
src/collector/: __init__.py  api.py  factors.py  factors_original.py  factors_v2.py
src/core/: config.py  constants.py  exceptions.py  logging_config.py  security.py  system_state.py  telemetry.py
src/domain/: exceptions.py
src/infrastructure/: __init__.py
src/scripts/: collect_all_v2.py  detect_anomalies_v2.py  embed_signals.py  generate_training_data.py  scheduler.py  scoring_composite.py  watcher.py
src/training_data/: tajine_training_20260220_190922.jsonl
tests/: README.md  TESTING_GUIDE.md  conftest.py
tests/e2e/: test_analyze_command.py  test_multi_source_analysis.py  test_tajine_full_flow.py
tests/integration/: conftest.py  test_active_learning.py  test_cli_commands.py  test_config_check.py  test_conversation_persistence.py  test_fine_tuning_complete.py  test_live_automation_e2e.py  test_llm_debate_integration.py  test_ml_pipeline_complete.py  test_model_storage_pipeline.py  test_ollama_endpoints.py
(+1284 files in other folders)
